--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,7 +6,7 @@
 */
 body {
     margin: 0;
-    background-image: url("gradient3.jpg");
+    background-image: url("../images/gradient3.jpg");
     background-size: cover;
     background-color: #f4f4f4;
     color: #555555;
